<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="Create a Story"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/thriftyBlack"
        android:id="@+id/txtViewHeader" />

    <TextView
        android:text="Title: "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/thriftyBlack"
        android:id="@+id/txtViewTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtTxtTitle" />

    <TextView
        android:text="Category: "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/thriftyBlack"
        android:id="@+id/txtViewCategory" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categorySpinner" />

    <TextView
        android:text="Location: "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/thriftyBlack"
        android:id="@+id/txtViewLocation" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtTxtLocation" />

    <TextView
        android:text="Caption: "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/thriftyBlack"
        android:id="@+id/txtViewCaption" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtTxtCaption" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:text="Submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/submitButton"
            android:layout_weight="1"
            style="@style/ThriftyButton" />

        <Button
            android:text="Cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            style="@style/ThriftyButton" />

    </LinearLayout>

</LinearLayout>