...
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="Fort Myers, USA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/locationButton"
                    android:layout_weight="0.11"
                    android:drawableLeft="@android:drawable/ic_dialog_map"
                    android:background="@android:color/transparent"
...
                    android:layout_weight="0.29"/>

                <Button
                    android:text="Share"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/shareButton"
                    android:layout_weight="0.10"
                    android:drawableLeft="@android:drawable/ic_menu_share"
                    android:background="@android:color/transparent"
                    android:drawableTint="@color/colorPrimaryDark"/>

            </LinearLayout>
...
