<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="Navigate">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:title="Home" />
                <item
                    android:id="@+id/nav_my_saved_locations"
                    android:title="My Saved Locations" />
            </menu>
        </item>
        <item android:title="Preferences">
            <menu>
                <item
                    android:id="@+id/nav_link_accounts"
                    android:title="Link Accounts" />
                <item
                    android:id="@+id/nav_update_interests"
                    android:title="Update Interests" />
                <item
                    android:id="@+id/nav_settings"
                    android:title="Settings" />
            </menu>
        </item>
    </group>


</menu>
